# minesweeper

./: .gitignore  README.md  pyproject.toml
documentation/: maarittelydokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md
src/main/: main.py  minesweeper.py
src/main/minesweeper/: minesweeper.py
src/tests/: minesweeper_test.py
